# turbo-overlay

./: .pre-commit-config.yaml  AGENTS.md  README.md
.agents/skills/overlay-tools/: .gitignore  README.md  SKILL.md  pyproject.toml
.agents/skills/overlay-tools/docs/: manual-update-checks.md  update-sources.md
.agents/skills/overlay-tools/src/overlay_tools/: __init__.py
.agents/skills/overlay-tools/src/overlay_tools/cli/: check_updates.py  update_ebuild.py
.agents/skills/overlay-tools/src/overlay_tools/core/: __init__.py  gh_utils.py  git_utils.py  github.py  logging.py  overlay.py  package_sources.py  report.py  subprocess_utils.py  versions.py
.agents/skills/overlay-tools/src/overlay_tools/core/update_sources/: __init__.py  base.py  hayase.py  registry.py  warp.py
.agents/skills/overlay-tools/tests/: test_check_updates.py  test_ebuilds.py  test_gh_utils.py  test_git_utils.py  test_github.py  test_package_sources.py  test_report.py  test_update_ebuild_cli.py  test_update_sources.py  test_versions.py
.github/: renovate.json
.github/workflows/: check-updates.yml  ci.yml  pkgcheck.yml
deprecated/vesktop-bin/: Manifest  vesktop-bin-1.5.7.ebuild
dev-libs/xmrig-cuda/: Manifest  metadata.xml  xmrig-cuda-6.15.1.ebuild
dev-python/configparser/: Manifest  configparser-9999.ebuild  metadata.xml
dev-util/t3code-bin/: Manifest  metadata.xml  t3code-bin-0.0.11.ebuild
dev-util/yaak-bin/: Manifest  metadata.xml  yaak-bin-2026.2.4.ebuild  yaak-bin-2026.3.1.ebuild  yaak-bin-2026.4.0.ebuild
games-util/protonup/: Manifest  metadata.xml  protonup-9999.ebuild
games-util/vkbasalt/: Manifest  metadata.xml  vkbasalt-9999.ebuild
media-video/hayase-bin/: Manifest  (+6 more)
profiles/: categories
(+208 files in other folders)
