[project]
name = "overlay-tools"
version = "0.1.0"
description = "Shared library for turbo-overlay maintenance scripts"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27,<1",
    "packaging>=24.0",
    "rich>=13.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--tb=short"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
extend-select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ty.environment]
python-version = "3.11"
root = ["./src"]

[dependency-groups]
dev = [
    "pre-commit>=4.0.0,<5",
    "pytest>=9.0.2",
    "ruff>=0.15.20,<0.16",
    "ty>=0.0.55,<0.1",
]
